fix select sca dropdown on firefox

--- a/consent-ui/src/styles.scss
+++ b/consent-ui/src/styles.scss
@@ -86,7 +86,7 @@ a {
     padding: 0;
 
     .form-control {
-      padding: 1.5rem 1rem;
+      padding-left: 1rem;
       transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
       font-size: 1.125rem;
     }
